# handsoff-rs

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  DEVELOPER.md  DEVELOPMENT.md  EULA  Info.plist.template  Makefile  README.md  SUMMARY.md  build.rs  com.handsoff.inputlock.plist.template  fix-bundle.sh
.github/workflows/: README.md  release.yml  rust.yml
assets/: AppIcon.icns  README.md
docs/: AUTO-UNLOCK-IMPLEMENTATION-SUMMARY.md  AUTO-UNLOCK-QUICK-REFERENCE.md  BUNDLE_IMPLEMENTATION.md  DEBUG_ACCESSIBILITY.md  DEVELOPMENT.md  HOTKEY_BUGS.md  HOTKEY_FIXES_SUMMARY.md  QUICK-START-SAFETY.md  SAFE-DEVELOPMENT.md  TESTING-AUTO-UNLOCK.md  TESTING-SUMMARY.md
installer/: INSTALLER-GUIDE.md  README.md  build-pkg.sh  conclusion.html  welcome.html
installer/scripts/: postinstall  preinstall  setup-launch-agent.sh  uninstall.sh
specs/: auto-unlock-safety-feature.md  build_as_macos_app.md  cli-and-tray-app-design.md  event-tap-permission-handling.md  fix_PAC_crash_claude.md  fix_PAC_crash_codex.md  fix_slow_event_callback_codex.md  fix_slow_event_callback_glm.md  fix_slow_event_callback_opus_46.md  handsoff-design.md  passphrase-encryption.md  phase-2.md  windowserver-stability-fix.md
src/: app_state.rs  config.rs  config_file.rs  constants.rs  crypto.rs  lib.rs  main.rs
src/auth/: keychain.rs  mod.rs  touchid.rs
src/input_blocking/: event_tap.rs  hotkeys.rs  mod.rs
src/ui/: dialogs.rs  dispatch.rs  menubar.rs  mod.rs  notifications.rs
src/utils/: keycode.rs  mod.rs
tests/: README.md  app_state_tests.rs  auth_tests.rs  keycode_tests.rs
utils/: debug_permissions.sh
