[package]
name = "handsoff"
version = "0.1.0"
edition = "2021"
authors = ["Michael S. Huang"]
description = "macOS menu bar app to prevent accidental input during video calls"

[dependencies]
cocoa = "0.25"
core-graphics = "0.25"
objc = "0.2"
foreign-types = "0.5"
security-framework = "2.11"
keyring = "2.3"
ring = "0.17"
hex = "0.4"
global-hotkey = "0.6"
parking_lot = "0.12"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dispatch = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]

[[bin]]
name = "handsoff"
path = "src/main.rs"

[package.metadata.bundle]
name = "HandsOff"
identifier = "com.handsoff.inputlock"
version = "0.1.0"
copyright = "Copyright © 2024 Michael S. Huang"
category = "public.app-category.utilities"
short_description = "Prevent accidental input during video calls"
long_description = """
A macOS menu bar application that prevents accidental or unsolicited input from
keyboard, trackpad, and mouse devices during video conferencing, presentations,
or when leaving your laptop unattended.
"""

# macOS-specific bundle configuration
osx_minimum_system_version = "10.11"
osx_frameworks = []
osx_url_schemes = []
osx_info_plist_template = "Info.plist.template"

# Resources to include in the bundle
resources = []
