[package]
name = "handsoff"
version = "0.5.1"
edition = "2021"
authors = ["Michael S. Huang"]
description = "macOS utility to block unsolicited input from unwanted hands"

[dependencies]
core-graphics = "0.25"
foreign-types = "0.5"
security-framework = "2.11"
ring = "0.17"
hex = "0.4"
global-hotkey = "0.6"
parking_lot = "0.12"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

# Tray App dependencies
tray-icon = "0.17"
tao = "0.28"
notify-rust = "4"
image = { version = "0.25", default-features = false, features = ["png"] }  # Lightweight PNG decoder

# Encryption and configuration dependencies
aes-gcm = "0.10"           # AES-GCM authenticated encryption
rpassword = "7.3"          # Non-echoing password input
dirs = "5.0"               # Standard config directory paths
base64 = "0.22"            # Encode/decode encrypted data
sha2 = "0.10"              # SHA-256 for key derivation
getrandom = "0.2"          # Cryptographically secure random number generation
toml = "0.8"               # TOML parsing
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]

[[bin]]
name = "handsoff"
path = "src/bin/handsoff.rs"

[[bin]]
name = "handsoff-tray"
path = "src/bin/handsoff-tray.rs"

[package.metadata.bundle]
name = "HandsOff"
identifier = "com.handsoff.inputlock"
version = "0.1.0"
copyright = "Copyright © 2024 Michael S. Huang"
category = "public.app-category.utilities"
short_description = "Prevent accidental input during video calls"
long_description = """
A macOS menu bar application that prevents accidental or unsolicited input from
keyboard, trackpad, and mouse devices during video conferencing, presentations,
or when leaving your laptop unattended.
"""
icon = ["assets/AppIcon.icns"]

# macOS-specific bundle configuration
osx_minimum_system_version = "10.11"
osx_frameworks = []
osx_url_schemes = []
osx_info_plist_template = "Info.plist.template"

# Resources to include in the bundle
resources = ["com.handsoff.inputlock.plist.template"]

# Bundle configuration for tray binary (same as main bundle)
[package.metadata.bundle.bin.handsoff-tray]
name = "HandsOff"
icon = ["assets/AppIcon.icns"]
resources = ["com.handsoff.inputlock.plist.template"]
